Sun Apr  9 17:55:51 2006  Tim Janik  <timj@gtk.org>

	* docs/bse.5.doxi: new manual page about the BSE file format.

	* docs/Makefile.am: build and install manual pages. fixed up some rules.

	* beast-gtk/bstapp.c: removed html page extensions from online resources.

	* docs/beast-index.doxi: fixed online links and added .bse manual page.

	* docs/sfidl.1.doxi:
	* docs/beast.1.doxi: link fixups.

	* docs/bsesh.1.doxi: link and synopsis fixups.

	* web/robots.txt: disallow reference docs for W3C-checklink.

Sun Apr  9 15:54:25 2006  Tim Janik  <timj@gtk.org>

	* web/htaccess.in: allow content type negotiation via MultiViews.
	removed content type extensions from redirects. added redirects
	for old screenshot and logogallery links.

	* web/*.doxi: removed content type extensions from internal links.

	* web/Makefile.am: adapted to screenshots and logogallery files
	residing in web/screenshotdir/ and web/logogallerydir/.

Sun Apr  9 14:30:52 2006  Tim Janik  <timj@gtk.org>

	* web/logogallerydir/: CVS moved from web/logogallery/.

	* web/screenshotdir/: CVS moved from web/screenshots/.

Sat Apr  8 14:29:07 2006  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-fretless-base.bse: added fretless base
	instrument from Stefan Westerfeld.

	* library/instruments/bqs-organ.bse: added Organ instrument.

	* library/instruments/bqs-queek-synth.bse: added simplistic synth
	instrument.

	* library/instruments/bqs-syndrum.bse: added DavSynDrum instrument.

	* library/instruments/test-string.bse:
	* library/instruments/synth-lead.bse: removed old test synths, 
	superceeded by bqs-queek-synth.bse.

Sat Apr  8 02:03:52 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstfiledialog.c: added tooltips. when displaying
	huge file libraries, display WAVE_NAME in the first column, i.e.
	the file baename or any internal detected filename.

	* beast-gtk/bsttreestores.c: fallback to the file basename for 
	WAVE_NAME, until file info could be loaded.