@@ -50,12 +50,14 @@ PSOURCE_TARGETS = $(strip			\
 	psource/bse-objects.psrc		\
 	psource/bse-interface.psrc		\
 )
+# noinst_DATA = ${PSOURCE_TARGETS}
 
 DOXER = $(top_srcdir)/doxer/doxer.py
 DOCFRAME_DEFS = -D DOXI_INCLUDE_FILE \"docframe.doxi\"
 DOXIDEFS = -D TOP_WEBDIR "." -D BST_VERSION ${BST_VERSION} -I $(srcdir) $(call DOCFRAME_DEFS)
 
-# noinst_DATA = ${PSOURCE_TARGETS}
+# ship readily built documentation
+EXTRA_DIST += $(MAN_TARGETS) $(HTML_TARGETS) $(STYLE_TARGETS)
 
 # build and install MAN pages
 dist_man_MANS = $(MAN_TARGETS)	# sfi.3 bse.3 beast-gxk.3 bse-procs.3 bse-structs.3
@@ -83,29 +85,29 @@ uninstall-local:
 html/style/%: $(top_srcdir)/web/style/%
 	@mkdir -p html/style/
 	cp $< $@
-html/style/doxer-style.css:
+html/style/doxer-style.css: @DOXRULE@
 	$(DOXER) writecss -d html/style/
 
 # MAN generation rules
-mans/%.1: %.1.doxi
+mans/%.1: @DOXRULE@ %.1.doxi
 	@mkdir -p mans/
 	$(DOXER) doxi2man $< -d mans/ $(DOXIDEFS)
-mans/%.3: %.3.doxi
+mans/%.3: @DOXRULE@ %.3.doxi
 	@mkdir -p mans/
 	$(DOXER) doxi2man $< -d mans/ $(DOXIDEFS)
-mans/%.5: %.5.doxi
+mans/%.5: @DOXRULE@ %.5.doxi
 	@mkdir -p mans/
 	$(DOXER) doxi2man $< -d mans/ $(DOXIDEFS)
 
 # HTML generation rules
-html/%.1.html: %.1.doxi
+html/%.1.html: @DOXRULE@ %.1.doxi
 	$(DOXER) doxi2htmlman $< -d html/ $(DOXIDEFS)
-html/%.3.html: %.3.doxi
+html/%.3.html: @DOXRULE@ %.3.doxi
 	$(DOXER) doxi2htmlman $< -d html/ $(DOXIDEFS)
-html/%.html: %.doxi
+html/%.html: @DOXRULE@ %.doxi
 	@mkdir -p html/
 	$(DOXER) doxi2html $< -d html/ $(DOXIDEFS)
-html/%.html: gendoxi/%.doxi
+html/%.html: @DOXRULE@ gendoxi/%.doxi
 	$(DOXER) doxi2html $< -d html/ $(DOXIDEFS)
 
 # Generated .doxi files
@@ -136,14 +138,14 @@ gendoxi/engine-mplan.doxi: $(top_srcdir)/bse/engine-mplan.txt # Makefile
 	&& sed  's/@/@@/g'              <$<                     >>$@ \
 	&& echo '@done'                                         >>$@
 # BSE object docu
-gendoxi/bse-objects.doxi: psource/bse-objects.psrc docu-template.doxi
+gendoxi/bse-objects.doxi: @DOXRULE@ psource/bse-objects.psrc docu-template.doxi
 	@mkdir -p gendoxi/
 	$(DOXER) pickle2doxi $(strip	$<	-D TOP_WEBDIR ".."		\
 	         -d gendoxi/ $(DOXIDEFS)	-T docu-template.doxi		\
 	         -D DOCU_TEMPLATE_TITLE "BEAST - BSE Object Reference"		\
 	         -D DOCU_TEMPLATE_HEADING "BSE Object Reference" )
 # BSE interface docu
-gendoxi/bse-interface.doxi: psource/bse-interface.psrc docu-template.doxi
+gendoxi/bse-interface.doxi: @DOXRULE@ psource/bse-interface.psrc docu-template.doxi
 	@mkdir -p gendoxi/
 	$(DOXER) pickle2doxi $(strip	$<	-D TOP_WEBDIR ".."		\
 	         -d gendoxi/ $(DOXIDEFS)	-T docu-template.doxi		\
@@ -184,14 +186,14 @@ psource/gxk.psrc: $(gxk_rdocu_files)
 	@mkdir -p psource/
 	$(call make_psource, $@, $(filter %.h %.hh, $(gxk_rdocu_files)) -Y $(filter-out %.h %.hh, $(gxk_rdocu_files)) )
 # BSE object docu
-psource/bse-objects.psrc: $(AUTODOC) $(top_builddir)/config.status
+psource/bse-objects.psrc: @DOXRULE@ $(AUTODOC) $(top_builddir)/config.status
 	@mkdir -p psource/
 	cd . \
 	&& $(AUTODOC) -p -s objects	>psource/bse-objects.scad	\
 	&& $(DOXER) scad2pickle -o $@ psource/bse-objects.scad		\
 	&& rm -f psource/bse-objects.scad
 # BSE interface docu
-psource/bse-interface.psrc: $(AUTODOC) $(top_builddir)/config.status
+psource/bse-interface.psrc: @DOXRULE@ $(AUTODOC) $(top_builddir)/config.status
 	@mkdir -p psource/
 	cd . \
 	&& $(AUTODOC) -p -s procs	 >psource/bse-interface.scad	\
